# qc

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  notes  qc.nix  shell.nix
nix/: rust.nix  sources.json
src/: lib.rs
src/commands/: export_clues.rs  fetch_clues.rs  find.rs  mod.rs  print.rs
src/crosswords/: mod.rs
src/crosswords/sources/: mod.rs
src/crosswords/sources/guardian/: mod.rs
src/crosswords/sources/nyt/: mod.rs
src/generate/: data.rs  grid.rs  mod.rs  qc.rs  search.rs  search.rs.bak
src/generate/search/: mod.rs
src/generate/search/searchers/: alternating.rs  dense.rs  mod.rs
src/munge/: mod.rs
src/store/: broda_scores.rs  csv.rs  mod.rs  word_frequencies.rs
