[package]
name = "qc"
version = "0.1.0"
authors = ["Austin Platt <austinplatt@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
reqwest = { version = "0.11", features = ["blocking"] }
serde = "1.0.136"
serde_json = "1.0.79"
schemars = "0.8.8"
scraper = "0.12.0"
sqlite = "0.24.0"
csv = "1.1.6"
combinations = "0.1.0"
itertools = "0.7.8"
chrono = "0.4.19"
clap = { version = "3.1.2", features = ["derive"] }
term-table = "1.3.2"
